--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
   "private": false,
   "license": "MIT",
+  "version": "1.0.0",
+  "homepage": "https://github.com/431910864/dumi-antd-components#readme",
+  "keywords": [
+    "dumi",
+    "antd",
+    "components",
+    "dumi-antd-components",
+    "npm",
+    "node"
+  ],
+  "name": "dumi-antd-components",
+  "bugs": {
+    "url": "https://github.com/431910864/dumi-antd-components/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/431910864/dumi-antd-components.git"
+  },
   "workspaces": [
     "packages/*"
   ],
