--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,16 @@
     "declaration": true,
     "skipLibCheck": true,
     "paths": {
-      "@ant-design/pro-layout": ["./packages/layout/src/index.tsx"],
-      "@ant-design/pro-form": ["./packages/form/src/index.tsx"],
-      "@ant-design/pro-table": ["./packages/table/src/index.tsx"],
-      "@ant-design/pro-field": ["./packages/field/src/index.tsx"],
-      "@ant-design/pro-skeleton": ["./packages/skeleton/src/index.tsx"],
-      "@ant-design/pro-list": ["./packages/list/src/index.tsx"],
-      "@ant-design/pro-provider": ["./packages/provider/src/index.tsx"],
-      "@ant-design/pro-descriptions": ["./packages/descriptions/src/index.tsx"],
-      "@ant-design/pro-utils": ["./packages/utils/src/index.tsx"],
-      "@ant-design/pro-card": ["./packages/card/src/index.tsx"]
+      "@ant-design1/pro-layout": ["./packages/layout/src/index.tsx"],
+      "@ant-design1/pro-form": ["./packages/form/src/index.tsx"],
+      "@ant-design1/pro-table": ["./packages/table/src/index.tsx"],
+      "@ant-design1/pro-field": ["./packages/field/src/index.tsx"],
+      "@ant-design1/pro-skeleton": ["./packages/skeleton/src/index.tsx"],
+      "@ant-design1/pro-list": ["./packages/list/src/index.tsx"],
+      "@ant-design1/pro-provider": ["./packages/provider/src/index.tsx"],
+      "@ant-design1/pro-descriptions": ["./packages/descriptions/src/index.tsx"],
+      "@ant-design1/pro-utils": ["./packages/utils/src/index.tsx"],
+      "@ant-design1/pro-card": ["./packages/card/src/index.tsx"]
     }
   },
   "include": [
