--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "license": "MIT",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "homepage": "https://github.com/431910864/dumi-antd-components#readme",
   "keywords": [
     "dumi",
@@ -23,7 +23,7 @@
     "packages/*"
   ],
   "scripts": {
-    "publish": "npm run compile && lerna publish",
+    "publish1": "npm run compile && lerna publish",
     "changelog1": "lerna-changelog",
     "clean": "lerna clean -y",
     "bootstrap1": "lerna bootstrap",
