--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-card",
-  "version": "1.14.4",
+  "name": "@ant-design1/pro-card",
+  "version": "1.0.0",
   "description": "@ant-design/pro-card",
   "keywords": [
     "antd",
