--- a/packages/field/package.json
+++ b/packages/field/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-field",
-  "version": "1.18.9",
+  "name": "@ant-design1/pro-field",
+  "version": "1.0.0",
   "description": "原子信息组件，统一 ProForm、ProTable、ProList、Filter 等组件里面的字段定义。",
   "homepage": "https://github.com/ant-design/pro-components/tree/master/packages/plugin-layout#readme",
   "bugs": "https://github.com/ant-design/pro-components/issues",
