--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-form",
-  "version": "1.31.1",
+  "name": "@ant-design1/pro-form",
+  "version": "1.0.0",
   "description": "@ant-design/pro-form",
   "keywords": [
     "antd",
