--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-layout",
-  "version": "6.21.0",
+  "name": "@ant-design1/pro-layout",
+  "version": "1.0.0",
   "description": "@ant-design/pro-layout",
   "keywords": [
     "antd",
