--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-list",
-  "version": "1.10.4",
+  "name": "@ant-design1/pro-list",
+  "version": "1.0.0",
   "description": "🏆 Use Ant Design List like a Pro!",
   "keywords": [
     "antd",
