--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-provider",
-  "version": "1.4.15",
+  "name": "@ant-design1/pro-provider",
+  "version": "1.0.0",
   "description": "@ant-design/pro-provider",
   "keywords": [
     "antd",
