--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-skeleton",
-  "version": "1.0.1",
+  "name": "@ant-design1/pro-skeleton",
+  "version": "1.0.0",
   "description": "@ant-design/pro-skeleton",
   "keywords": [
     "antd",
