--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-table",
-  "version": "2.43.2",
+  "name": "@ant-design1/pro-table",
+  "version": "1.0.0",
   "description": "🏆 Use Ant Design Table like a Pro!",
   "keywords": [
     "antd",
