--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ant-design/pro-utils",
-  "version": "1.19.4",
+  "name": "@ant-design1/pro-utils",
+  "version": "1.0.0",
   "description": "@ant-design/pro-utils",
   "keywords": [
     "antd",
