--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ant-design1/pro-provider",
+  "name": "dumi-antd-components/pro-provider",
   "version": "1.0.1",
   "description": "@ant-design/pro-provider",
   "keywords": [
@@ -42,5 +42,6 @@
   "authors": [
     "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)",
     "chenshuai2144 <qixian.cs@outlook.com> (https://github.com/chenshuai2144)"
-  ]
+  ],
+  "gitHead": "1412d5e248bf35d1338dcc9399a1578b2c07d626"
 }
