--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dumi-antd-components/pro-provider",
+  "name": "@dumi-antd-components/pro-provider",
   "version": "1.0.1",
   "description": "@ant-design/pro-provider",
   "keywords": [
