--- a/packages/field/package.json
+++ b/packages/field/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dumi-antd-components/pro-field",
-  "version": "1.0.1",
+  "name": "@dumi-antd-components/pro-field",
+  "version": "1.0.0",
   "description": "原子信息组件，统一 ProForm、ProTable、ProList、Filter 等组件里面的字段定义。",
-  "homepage": "https://github.com/ant-design/pro-components/tree/master/packages/plugin-layout#readme",
-  "bugs": "https://github.com/ant-design/pro-components/issues",
+  "homepage": "https://github.com/431910864/dumi-antd-components/tree/master/packages/plugin-layout#readme",
+  "bugs": "https://github.com/431910864/dumi-antd-components/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ant-design/pro-components"
+    "url": "https://github.com/431910864/dumi-antd-components"
   },
   "license": "MIT",
   "author": "chenshuai2144",
