--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dumi-antd-components/pro-table",
-  "version": "1.0.1",
+  "name": "@dumi-antd-components/pro-table",
+  "version": "1.0.0",
   "description": "🏆 Use Ant Design Table like a Pro!",
   "keywords": [
     "antd",
