--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "private": true,
+  "private": false,
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "https://github.com/431910864/dumi-antd-components#readme",
   "keywords": [
     "dumi",
