--- a/packages/field/package.json
+++ b/packages/field/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dumi-antd-components/pro-field",
+  "name": "@dumi-antd/pro-field",
   "version": "1.0.1",
   "description": "原子信息组件，统一 ProForm、ProTable、ProList、Filter 等组件里面的字段定义。",
   "homepage": "https://github.com/431910864/dumi-antd-components/tree/master/packages/plugin-layout#readme",
