--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "private": false,
+  "private": true,
   "license": "MIT",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "homepage": "https://github.com/431910864/dumi-antd-components#readme",
   "keywords": [
     "dumi",
@@ -11,7 +11,7 @@
     "npm",
     "node"
   ],
-  "name": "dumi-antd-components",
+  "name": "@dumi-antd/dumi-antd-components",
   "bugs": {
     "url": "https://github.com/431910864/dumi-antd-components/issues"
   },
@@ -217,5 +217,12 @@
     "@ant-design/icons": "^4.6.2",
     "@umijs/plugin-esbuild": "^1.1.0",
     "rc-resize-observer": "^1.0.0"
-  }
+  },
+  "description": "English | [简体中文](./README.zh-CN.md) | [Español](./README.es-PR.md)",
+  "main": ".eslintrc.js",
+  "directories": {
+    "doc": "docs",
+    "test": "tests"
+  },
+  "author": ""
 }
