--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dumi-antd-components/pro-layout",
+  "name": "@dumi-antd/pro-layout",
   "version": "1.0.1",
-  "description": "dumi-antd-components/pro-layout",
+  "description": "@dumi-antd/pro-layout",
   "keywords": [
     "antd",
     "admin",
