--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dumi-antd-components/pro-list",
+  "name": "@dumi-antd/pro-list",
   "version": "1.0.1",
   "description": "🏆 Use Ant Design List like a Pro!",
   "keywords": [
