--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dumi-antd-components/pro-table",
+  "name": "@dumi-antd/pro-table",
   "version": "1.0.1",
   "description": "🏆 Use Ant Design Table like a Pro!",
   "keywords": [
